# perlbuildwindows

./: .gitmodules  CMakeLists.txt  FreeImage_CMakeLists.txt  README.md  SSLeay.xs.diff  download.pl  fribidi_CMakeLists.txt  giflib-5.2.1.diff  installer.pl  jbigkit-CMakeLists.txt  libthai_CMakeLists.txt  libtiff-4.4.0.diff  modules.pl  openssl-3.0.5-util-perl-TLSProxy-Proxy.diff  patch.pl  perl-rt12986-win32-win32.c.patch  perl_module_pluggable.diff  perl_modules.txt  perlpatch.bat  post-install.pl  replace.vbs  sitecustomize.pl
patches/: Config-AutoConf-0.320.patch  Devel-Caller-2.06-RT144051-HYDAHY.patch  File-Copy-Recursive.patch  File-Find-Object-0.3.6-symlinks.patch  File-Find-Rule-0.34-unix-style.patch  IO-Socket-SSL-2.076.patch  IO-Socket-SSL-t_nonblock.patch  IO-Socket-SSL-t_sni.patch  IO-Socket-SSL-t_sni_verify.patch  Locale-Codes-3.72.patch  Log-Log4perl-1.56-PR119-TONYC-2.patch  Module-CPANTS-Analyse-1.01.patch  Pod-Parser-1.65.patch  Prima-1.67-fix-semistatic.patch  SSLeay.xs.diff  SSLeay.xs.patch  Test-File-1.992-windows-symlinks.patch  Test-Synopsis-0.17.patch  Test-Vars-0.015.patch  Unicode-LineBreak-2019.001-sombok.patch  Unicode-UTF8-0.62.patch  Win32-API-RT144834.patch  Win32-GUI-1.14-DLL_CALLCONV-prototype.patch  Win32-GUI-1.14-Fix-build_tools-dependency.patch  Win32-GUI-1.14-Grid-Detect-MFC-Version.patch  Win32-GUI-1.14-GridCtrl.patch  Win32-GUI-1.14-PERLUD_DECLARE.patch  Win32-GUI-1.14-Use-External-FreeImage.patch  Win32-GUI-1.14-Win32-GUI-DropFiles-t-11_invalid_handles.t.patch  Win32-GUI-1.14-atl-link.patch  Win32-GUI-1.14-freeimage-3.19.0.patch  Win32-GuiTest-1.64-issue-11.patch  Win32-GuiTest-1.64-issue-13.patch  Win32-LongPath-2.2-readline-clearerr.patch  Win32-MMF-0.09e.patch  Win32-NetAdmin-0.13-password-test.patch  Win32-ODBC-VS2015-and-later.patch  Win32-PowerPoint-Update-Constants-pm.patch  Win32-PowerPoint-Update-PowerPoint-pm.patch  Win32-Setupsup-1.12-t-10-registry-t.patch  (+12 more)
prefs/: Config-AutoConf.yml  Devel-Caller.yml  File-Copy-Recursive.yml  File-Find-Object.yml  File-Find-Rule.yml  IO-Socket-SSL.yml  Locale-Codes.yml  Log-Log4perl.yml  Module-CPANTS-Analyse.yml  Net-SSLeay.yml  Pod-Parser.yml  Prima.yml  Test-File.yml  Test-Synopsis.yml  Test-Vars.yml  Unicode-LineBreak.yml  Unicode-UTF8.yml  Win32-API.yml  Win32-GUI.yml  Win32-GuiTest.yml  Win32-LongPath.yml  Win32-MMF-0.09e.yml  Win32-NetAdmin.yml  Win32-ODBC.yml  Win32-PowerPoint.yml  Win32-Setupsup.yml  Win32-Unicode.yml  Win32-Wlan.yml  XML-LibXML.yml  XML-Parser.yml  libintl-perl.yml
